fix：fix the line break of numbers and letters(single word does not wrap)

--- a/src/components/TopicItem/style.less
+++ b/src/components/TopicItem/style.less
@@ -10,7 +10,7 @@
 
     .title {
       font-size: 16px;
-      word-break: break-all;
+      overflow-wrap: break-word;
     }
 
     .time {
@@ -35,7 +35,7 @@
     transition: max-height .3s;
     color: #797979;
     cursor: pointer;
-    word-break: break-all;
+    overflow-wrap: break-word;
     :hover {
       color: #414141;
       cursor: pointer;
@@ -46,7 +46,7 @@
   .topic-content-spread {
     max-height: 500px;
     cursor: pointer;
-    word-break: break-all;
+    overflow-wrap: break-word;
   }
 }
 
